# Assimp-rs

./: Cargo.toml  README.md
src/: bin.rs  cimport.rs  data.rs  lib.rs  postprocess.rs
src/data/: face.rs  mesh.rs  scene.rs  vector3.rs
