[package]
name = "assimp"
version = "1.0.0"

[lib]
name = "assimp"
path = "src/lib.rs"

[[bin]]
name = "assimp"
path = "src/bin.rs"

[dependencies]
libc = "0.2.0"
bitflags = "1.2.1"
glui = { git = "https://github.com/Frontier789/glui" }
glui_proc = { git = "https://github.com/Frontier789/glui_proc" }
gl = "*"
rand = "*"
downcast-rs = "*"
